--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<link media="all" rel="stylesheet" href="css/jquery.fancybox.css" />
 		<link media="all" rel="stylesheet" href="css/bootstrap.css" />
 <!-- 		<link media="all" rel="stylesheet" href="css/bootstrap-theme.min.css" /> -->
-		<link media="all" rel="stylesheet" href="css/all.css" />
+		<link media="all" rel="stylesheet" href="css/slyle.css" />
 		<script src="js/jquery-1.11.1.min.js"></script>	
 		<script src="js/jquery.validate.min.js"></script>
 		<script src="js/jquery.maskedinput.min.js"></script>
